--- a/Insanity/View/Base.lproj/Main.storyboard
+++ b/Insanity/View/Base.lproj/Main.storyboard
@@ -980,27 +980,43 @@
                                     <action selector="addTestPressed:" destination="0R8-ZT-1QA" eventType="touchUpInside" id="fug-sx-SeC"/>
                                 </connections>
                             </button>
-                            <segmentedControl opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="STN-OI-1Mi">
-                                <rect key="frame" x="3" y="50" width="408" height="51"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="3hO-y0-hDn"/>
-                                </constraints>
-                                <segments>
-                                    <segment title="Switch Kicks"/>
-                                    <segment title="Power Jacks"/>
-                                    <segment title="Power Knees"/>
-                                    <segment title="Power Jump"/>
-                                    <segment title="Global Jump"/>
-                                    <segment title="Suicide Jump"/>
-                                    <segment title="Push-Up Jack"/>
-                                    <segment title="Low Plank Oblique"/>
-                                </segments>
-                                <connections>
-                                    <action selector="segmentedControlPressed:" destination="0R8-ZT-1QA" eventType="valueChanged" id="brn-UE-z9E"/>
-                                </connections>
-                            </segmentedControl>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zdc-0l-A7o">
+                                <rect key="frame" x="10" y="50" width="394" height="98"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="STN-OI-1Mi">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="3hO-y0-hDn"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Switch Kicks"/>
+                                            <segment title="Power Jacks"/>
+                                            <segment title="Power Knees"/>
+                                            <segment title="Power Jump"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segmentedControlPressed:" destination="0R8-ZT-1QA" eventType="valueChanged" id="brn-UE-z9E"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="evY-rq-8MT">
+                                        <rect key="frame" x="0.0" y="53" width="394" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="C9i-zi-TVv"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Global Jump"/>
+                                            <segment title="Suicide Jump"/>
+                                            <segment title="Push-Up Jack"/>
+                                            <segment title="Low Plank Oblique"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segmentedControlPressed:" destination="0R8-ZT-1QA" eventType="valueChanged" id="CVH-d3-6aK"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y54-26-QBy" customClass="BarChartView" customModule="Charts">
-                                <rect key="frame" x="50" y="150" width="314" height="200"/>
+                                <rect key="frame" x="50" y="168" width="314" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="Ip0-bG-OD1"/>
@@ -1011,16 +1027,16 @@
                         <constraints>
                             <constraint firstItem="glq-rp-bN8" firstAttribute="trailing" secondItem="Y54-26-QBy" secondAttribute="trailing" constant="50" id="4uI-7q-atX"/>
                             <constraint firstItem="Y54-26-QBy" firstAttribute="leading" secondItem="glq-rp-bN8" secondAttribute="leading" constant="50" id="61V-Qt-fJ7"/>
-                            <constraint firstItem="glq-rp-bN8" firstAttribute="trailing" secondItem="STN-OI-1Mi" secondAttribute="trailing" constant="3" id="9jZ-1Q-cXz"/>
-                            <constraint firstItem="STN-OI-1Mi" firstAttribute="top" secondItem="glq-rp-bN8" secondAttribute="top" constant="50" id="COf-ov-lhs"/>
-                            <constraint firstItem="Y54-26-QBy" firstAttribute="top" secondItem="STN-OI-1Mi" secondAttribute="bottom" constant="50" id="CSu-It-91F"/>
+                            <constraint firstItem="Y54-26-QBy" firstAttribute="top" secondItem="Zdc-0l-A7o" secondAttribute="bottom" constant="20" id="Ach-76-Ojb"/>
+                            <constraint firstAttribute="trailing" secondItem="Zdc-0l-A7o" secondAttribute="trailing" constant="10" id="H5I-uJ-anZ"/>
                             <constraint firstItem="53S-76-BCi" firstAttribute="leading" secondItem="glq-rp-bN8" secondAttribute="leading" constant="40" id="PES-Zi-6mx"/>
                             <constraint firstItem="VRV-1k-e7D" firstAttribute="centerX" secondItem="Gak-lA-93W" secondAttribute="centerX" id="Thd-78-wqz"/>
                             <constraint firstItem="glq-rp-bN8" firstAttribute="bottom" secondItem="53S-76-BCi" secondAttribute="bottom" constant="30" id="Ump-Na-jxT"/>
-                            <constraint firstItem="STN-OI-1Mi" firstAttribute="leading" secondItem="glq-rp-bN8" secondAttribute="leading" constant="3" id="YFp-Ms-9SL"/>
                             <constraint firstAttribute="trailing" secondItem="VRV-1k-e7D" secondAttribute="trailing" id="Ytj-ou-Spd"/>
                             <constraint firstItem="VRV-1k-e7D" firstAttribute="centerY" secondItem="Gak-lA-93W" secondAttribute="centerY" id="bJm-KP-Dhh"/>
+                            <constraint firstItem="Zdc-0l-A7o" firstAttribute="leading" secondItem="Gak-lA-93W" secondAttribute="leading" constant="10" id="kvv-Av-9vS"/>
                             <constraint firstItem="glq-rp-bN8" firstAttribute="trailing" secondItem="53S-76-BCi" secondAttribute="trailing" constant="40" id="qJA-Lb-ED6"/>
+                            <constraint firstItem="Zdc-0l-A7o" firstAttribute="top" secondItem="glq-rp-bN8" secondAttribute="top" constant="50" id="xMS-YR-8x1"/>
                             <constraint firstItem="VRV-1k-e7D" firstAttribute="leading" secondItem="glq-rp-bN8" secondAttribute="leading" id="yWi-yA-A6B"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="glq-rp-bN8"/>
@@ -1031,7 +1047,8 @@
                         <outlet property="addTestButton" destination="53S-76-BCi" id="Pxi-pN-ZAt"/>
                         <outlet property="barChart" destination="Y54-26-QBy" id="tTQ-sp-4mI"/>
                         <outlet property="msgLabel" destination="VRV-1k-e7D" id="d1C-xX-zKM"/>
-                        <outlet property="segmentedControl" destination="STN-OI-1Mi" id="jyF-LO-bep"/>
+                        <outlet property="segment1" destination="STN-OI-1Mi" id="jyF-LO-bep"/>
+                        <outlet property="segment2" destination="evY-rq-8MT" id="kwx-CG-r8w"/>
                         <segue destination="TnM-Vq-Ygn" kind="show" identifier="goToTest" id="amr-TI-1n0"/>
                     </connections>
                 </viewController>
