--- a/Insanity/View/AddFriendCell.xib
+++ b/Insanity/View/AddFriendCell.xib
@@ -9,39 +9,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseAddFriend" rowHeight="123" id="KGk-i7-Jjw" customClass="AddFriendCell" customModule="Insanity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="326" height="123"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseAddFriend" rowHeight="94" id="KGk-i7-Jjw" customClass="AddFriendCell" customModule="Insanity" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="326" height="94"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="326" height="123"/>
+                <rect key="frame" x="0.0" y="0.0" width="326" height="94"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yTr-ds-1e8">
-                        <rect key="frame" x="10" y="10" width="306" height="103"/>
+                        <rect key="frame" x="10" y="5" width="306" height="84"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1Sn-0x-8kU">
-                                <rect key="frame" x="10" y="10" width="286" height="83"/>
+                                <rect key="frame" x="10" y="5" width="286" height="74"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar17" translatesAutoresizingMaskIntoConstraints="NO" id="Isg-Nv-Ica">
-                                        <rect key="frame" x="0.0" y="16.5" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="14.5" width="45" height="45"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="ScJ-1k-MSe"/>
-                                            <constraint firstAttribute="height" constant="50" id="rGc-ld-tFi"/>
+                                            <constraint firstAttribute="width" constant="45" id="ScJ-1k-MSe"/>
+                                            <constraint firstAttribute="height" constant="45" id="rGc-ld-tFi"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marc-Antoine" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSU-Ll-dS2">
-                                        <rect key="frame" x="60" y="32.5" width="156" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                        <rect key="frame" x="55" y="29" width="161" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0o-Rf-PiO">
-                                        <rect key="frame" x="226" y="27" width="60" height="29"/>
+                                        <rect key="frame" x="226" y="23" width="60" height="28"/>
                                         <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="95Q-qr-dPm"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="Add">
                                             <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         </state>
@@ -59,17 +59,17 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="1Sn-0x-8kU" firstAttribute="top" secondItem="yTr-ds-1e8" secondAttribute="top" constant="10" id="33b-cS-ygZ"/>
+                            <constraint firstItem="1Sn-0x-8kU" firstAttribute="top" secondItem="yTr-ds-1e8" secondAttribute="top" constant="5" id="33b-cS-ygZ"/>
                             <constraint firstAttribute="trailing" secondItem="1Sn-0x-8kU" secondAttribute="trailing" constant="10" id="Iw9-YD-B9g"/>
                             <constraint firstItem="1Sn-0x-8kU" firstAttribute="leading" secondItem="yTr-ds-1e8" secondAttribute="leading" constant="10" id="Sy2-cp-qWE"/>
-                            <constraint firstAttribute="bottom" secondItem="1Sn-0x-8kU" secondAttribute="bottom" constant="10" id="oeX-CB-ZmR"/>
+                            <constraint firstAttribute="bottom" secondItem="1Sn-0x-8kU" secondAttribute="bottom" constant="5" id="oeX-CB-ZmR"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="yTr-ds-1e8" secondAttribute="bottom" constant="10" id="FV3-Fm-6Sk"/>
-                    <constraint firstItem="yTr-ds-1e8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="MDy-zk-RQa"/>
+                    <constraint firstAttribute="bottom" secondItem="yTr-ds-1e8" secondAttribute="bottom" constant="5" id="FV3-Fm-6Sk"/>
+                    <constraint firstItem="yTr-ds-1e8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="MDy-zk-RQa"/>
                     <constraint firstAttribute="trailing" secondItem="yTr-ds-1e8" secondAttribute="trailing" constant="10" id="cBv-U6-kx6"/>
                     <constraint firstItem="yTr-ds-1e8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="rT5-kG-G6w"/>
                 </constraints>
@@ -80,7 +80,7 @@
                 <outlet property="avatarImage" destination="Isg-Nv-Ica" id="1jE-2j-o9w"/>
                 <outlet property="pseudolabel" destination="gSU-Ll-dS2" id="bXD-Tx-oQG"/>
             </connections>
-            <point key="canvasLocation" x="275.36231884057975" y="82.03125"/>
+            <point key="canvasLocation" x="275.36231884057975" y="88.392857142857139"/>
         </tableViewCell>
     </objects>
     <resources>
